# rgen_experiment

./: .gitignore  README.md  pyproject.toml
rgen/cli/: __init__.py  eval_fid.py  prep_data.py  report.py  sample.py  sweep_cfg.py  train.py
rgen/core/: diffusion.py  ema.py  model.py  sampling.py
rgen/dataio/: cifar_export.py
rgen/models/: y_encoder.py
rgen/utils/: log.py  seed.py
scripts/: 01_prep_data.sh  02.1_test_urc.sh  02_train_gen.sh  03.2_test_ddpm.sh  03_sample_n_eval.sh  04_eval_only.sh  05_report.sh
scripts/m3/: 01.1_train_w_cfg.sh  01.2_train_cfg_urc.sh  01.2_train_cfg_urc_n_sample.sh  01_get_data_n_train.sh  02.2_sweeps_sample.sh  02.2_sweeps_sample_base.sh  02.3_sweeps_sample_cfg.sh  02.4_resample_ddpm_base.sh  02_sample_cfg.sh  02_sample_n_eval.sh  02_sample_n_eval_base.sh  03_sample_cfg.sh  03_sample_cfg_ddim.sh  03_sample_cfg_ddpm.sh  03_sample_urc.sh  03_sample_urc_ddpm.sh
tests/: sanity_cond.py  sanity_denoise.py  test_dataio.py  test_model_shape.py
